tests/errors/parser-errors/block/missing_block_end.smark
[Block]
This block has no end.
